--- a/party-info.html
+++ b/party-info.html
@@ -122,14 +122,19 @@
      }
    }
          function afterPageLoads() {
-     //      google.script.run.withSuccessHandler(afterDropDownArrayReturned).getDropDownArray();
-     //     google.script.run.withSuccessHandler(listOfPartyReturned).getPartyList();
-     setDataForSearch();
-     initialPartyInfo = document.getElementById("party-info").innerHTML;
-     document.getElementById("party-info").innerHTML = '';
-     console.log("I" + initialPartyInfo);
-     document.getElementById("table-id").style.display = "none";
-     
+     document.addEventListener("DOMContentLoaded", () => {
+  const token = localStorage.getItem('token');
+  if (!token) {
+    window.location.href = 'index.html'; // Redirect to login
+    return;
+  }
+
+  setDataForSearch();
+  initialPartyInfo = document.getElementById("party-info").innerHTML;
+  document.getElementById("party-info").innerHTML = '';
+  document.getElementById("table-id").style.display = "none";
+});
+
   
    }
 
