--- a/party-info.html
+++ b/party-info.html
@@ -194,7 +194,7 @@ function setDataForSearch() {
   params.append('action', 'getPartyList');
   params.append('token', token); // Add token here ✅
 
-  fetch(SCRIPT_URL, {
+  fetch('https://script.google.com/macros/s/AKfycbykzRl69oHA-B739cT78n8cnH_F2Se8TfUPmWJ9Xmx786fCJxFHbAxjtIR1OTr60ow5cw/exec', {
     method: 'POST',
     headers: {
       'Content-Type': 'application/x-www-form-urlencoded'
