--- a/party-info.html
+++ b/party-info.html
@@ -183,37 +183,30 @@
 
 
 function setDataForSearch() {
-  const token = localStorage.getItem('token'); // Retrieve saved token
+  const token = localStorage.getItem('token'); // ✅ Retrieve saved token
   if (!token) {
     alert('Not logged in. Please log in again.');
     window.location.href = 'index.html';
     return;
   }
 
-  const params = new URLSearchParams();
-  params.append('action', 'getPartyList');
-  params.append('token', token); // Add token here ✅
+  // ✅ Build query string directly
+  const queryString = `?action=getPartyList&token=${encodeURIComponent(token)}`;
 
-  fetch('https://script.google.com/macros/s/AKfycbykzRl69oHA-B739cT78n8cnH_F2Se8TfUPmWJ9Xmx786fCJxFHbAxjtIR1OTr60ow5cw/exec', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/x-www-form-urlencoded'
-    },
-    body: params.toString()
-  })
-  .then(response => response.json())
-  .then(result => {
-    if (result.success) {
-      data = result.data.slice();
-      console.log("Party list data:", data);
-    } else {
-      alert("Unauthorized or error fetching data: " + result.message);
-      window.location.href = 'index.html'; // Redirect if session expired
-    }
-  })
-  .catch(error => {
-    console.error('Error fetching party list:', error);
-  });
+  fetch('https://script.google.com/macros/s/AKfycbykzRl69oHA-B739cT78n8cnH_F2Se8TfUPmWJ9Xmx786fCJxFHbAxjtIR1OTr60ow5cw/exec' + queryString)
+    .then(response => response.json())
+    .then(result => {
+      if (result.success) {
+        data = result.data.slice();
+        console.log("Party list data:", data);
+      } else {
+        alert("Unauthorized or error fetching data: " + result.message);
+        window.location.href = 'index.html'; // Redirect if session expired
+      }
+    })
+    .catch(error => {
+      console.error('Error fetching party list:', error);
+    });
 }
 
 
