--- a/party-info.html
+++ b/party-info.html
@@ -194,13 +194,7 @@ function setDataForSearch() {
   params.append('action', 'getPartyList');
   params.append('token', token);
 
-  fetch('https://script.google.com/macros/s/AKfycbykzRl69oHA-B739cT78n8cnH_F2Se8TfUPmWJ9Xmx786fCJxFHbAxjtIR1OTr60ow5cw/exec', {
-    method: 'POST',
-    headers: {
-      'Content-Type': 'application/x-www-form-urlencoded'
-    },
-    body: params.toString()
-  })
+  fetch(`${SCRIPT_URL}?action=getPartyList&token=${encodeURIComponent(token)}`)
     .then(response => response.json())
     .then(result => {
       if (result.success) {
