--- a/party-info.html
+++ b/party-info.html
@@ -194,20 +194,25 @@ function setDataForSearch() {
   params.append('action', 'getPartyList');
   params.append('token', token);
 
-  fetch(`${SCRIPT_URL}?action=getPartyList&token=${encodeURIComponent(token)}`)
-    .then(response => response.json())
-    .then(result => {
-      if (result.success) {
-        data = result.data.slice();
-        console.log("Party list data:", data);
-      } else {
-        alert("Unauthorized or error fetching data: " + result.message);
-        window.location.href = 'index.html';
-      }
-    })
-    .catch(error => {
-      console.error('Error fetching party list:', error);
-    });
+fetch('https://script.google.com/macros/s/AKfycbykzRl69oHA-B739cT78n8cnH_F2Se8TfUPmWJ9Xmx786fCJxFHbAxjtIR1OTr60ow5cw/exec?action=getPartyList&token=' + encodeURIComponent(token))
+  .then(response => {
+    console.log("Raw response:", response);
+    return response.json();
+  })
+  .then(result => {
+    console.log("Parsed JSON result:", result);
+    if (result.success) {
+      data = result.data.slice();
+      console.log("Party list data:", data);
+    } else {
+      alert("Unauthorized or error: " + result.message);
+      window.location.href = 'index.html';
+    }
+  })
+  .catch(error => {
+    console.error("Fetch error:", error);
+  });
+
 }
 
 
