--- a/party-info.html
+++ b/party-info.html
@@ -3,6 +3,7 @@
   <head>
     <title>Party Info</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	      <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css" />
     <style>
     /* Container for the cards */
