--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Login / Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="manifest" href="/manifest.json">
      <link rel="stylesheet" href="styles.css" />
 
   </head>
