--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="loadingScreen">
-  <p>Loading...</p>
+  <img src="images/icon-192x192.png" alt="Loading..." class="loading-icon" />
 </div>
 
 <!-- Container for the login form -->
