--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <div id="mainContent" class="hidden">
   <!-- Container for the login form -->
   <div class="container">
+	      <div class="header">
+      <img src="images/icon-192x192.png" alt="Logo" class="logo">
+    </div>
     <!-- Login Section -->
     <div id="loginSection" class="hidden"> <!-- Add hidden class -->
       <h2>Login</h2>
